--- a/customdialogs.html
+++ b/customdialogs.html
@@ -18,6 +18,9 @@
                 margin-left: 155px;
                 padding: 15px;
             }
+            html {
+                background-color:rgb(200, 224, 224);
+            }
         </style>
 
         <script src="dist/purify.js" > </script>
