add santizing to inputs

--- a/crud.html
+++ b/crud.html
@@ -27,7 +27,7 @@
                 margin-left: 50vw;
             }
         </style>
-       <!--  <script src="dist/purify.js" > </script> --> 
+        <script src="dist/purify.js" > </script> 
         <script type="module" src="blog.js"> </script> 
 
     </head>
