--- a/personal_demos/index.html
+++ b/personal_demos/index.html
@@ -6,6 +6,15 @@
         <meta name="viewport" content="width=device-width, initial-scale=1" >
         <title> Personal Demos </title>
         <link rel="icon" href="/content/images/logoSmall.svg" alt="Brendan Devlin's personal logo, designed and created by him."> <!-- Adding favicon which my own logo-->
+        <!-- Google tag (gtag.js) -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-6P3KHGF93R"></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
+
+            gtag('config', 'G-6P3KHGF93R');
+        </script>
         <style>
             :root {
                 --color-primary: #ddcbee;
