--- a/customdialogs.html
+++ b/customdialogs.html
@@ -25,6 +25,15 @@
 
         <script src="dist/purify.js" > </script>
         <script type="module" src="customdialog.js"> </script>
+        <!-- Google tag (gtag.js) -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-6P3KHGF93R"></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
+
+            gtag('config', 'G-6P3KHGF93R');
+        </script>
 
     </head>
     <body>
