--- a/styledcrud.html
+++ b/styledcrud.html
@@ -51,7 +51,15 @@
         </style>
         <script src="dist/purify.js" > </script> 
         <script type="module" src="styledblog.js"> </script> 
+        <!-- Google tag (gtag.js) -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-6P3KHGF93R"></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
 
+            gtag('config', 'G-6P3KHGF93R');
+        </script>
     </head>
     <body>
         <header>
