add a lot more content to site

--- a/index.html
+++ b/index.html
@@ -268,7 +268,6 @@
              }
             /* table responsive stuff */
             @media screen and (max-width: 1023px) { 
-                /* helped heavily from https://css-tricks.com/responsive-data-tables/ */
                 /* Force table to not be like tables anymore */
                 table, thead, tbody, th, td, tr { 
                     display: block; 
@@ -376,8 +375,8 @@
                                 </picture>
                             </td>
                             <td> <strong> Java, C++, Python, Unix, JavaScript/HTML/CSS </strong> </td>
-                            <td> <strong> Thoughtful and kind communicator whose diligent digging never leaves his teammates in a hole. </strong> </td>
-                            <td> <b> I hope to become a very competent and real full stack developer. </b> </td>
+                            <td> <strong> Thoughtful and kind communicator whose diligent digging never leaves his teammates in a hole. </strong> Really enjoys the act of discovery; finding and learning new information. Good at team camaraderie, communication, and bonding. </td>
+                            <td> <b> I hope to become a very competent and real full stack developer. </b> I hope to graduate from UCSD with a B.S. in C.S. </td>
                             <td id="numLang"> <b> 7 </b> </td>
                         </tr>
                     </table>
@@ -386,7 +385,12 @@
                     <h3> <i> Philosophy </i> </h3>
                     <p> These are my personal beliefs and reflect no companies I work for. </p>
       
-                    <p> I believe that we all are <em>valuable</em>, that everything we do is <em>meaningful</em>, and that we are all part of the <em>immense cosmic casual web.</em> </p>
+                    <p> I believe that we all are <em>valuable</em>, that everything we do is <em>meaningful</em>, and that we are all part of the <em>immense cosmic casual web.</em> 
+                        I really believe reading is good for you, any kind of more sustained and intensive reading exercises the brain and helps the mind. 
+                        I think the power of any Turing-Complete programming language is truly awe-inspiring. The idea that we can use code to basically do anything we can dream up is a true enabler of the human potential. 
+                        Though that power obviously could be a double-edged sword. We must very eagerly temper that power with carefully considered ethical behavior. The issue is, like Alfred Nobel and his dynamite, we can never truly know or understand what people far in the future might be able to build, upon our work. 
+                        It might be that no matter the brilliant idea, some other ingenious human might come along and think of a way to make a weapon of it, or build off of it in such a way that harm comes to society and humanity. 
+                    </p>
                 </section>
 
                 <section id="likes">
@@ -406,6 +410,11 @@
                             <li> <i> Things Fall Apart </i> </li>
                             <li> <i> Frankenstein; or, The Modern Prometheus </i> </li>
                             <li> <i> Dune </i> </li>
+                            <li> <i> Artemis Fowl </i> </li>
+                            <li> <i> Bless Me Ultima </i> </li>
+                            <li> <i> The Good Earth </i> </li>
+                            <li> <i> 1984 and Animal Farm </i> </li>
+                            <li> <i> SlaughterHouse Five </i> </li>
                         </ol>
                         <aside> Did you know that Dune is being made into a big budget Movie? </aside>
                     </section>
